--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black[colorama=24.10.0
+          pip install black[colorama]=24.10.0
 
       - name: Run black
         uses: psf/black@stable
